# gravsim

./: Cargo.toml  Makefile.toml  README.md  compile.sh
gravsim-renderer/: Cargo.toml  compile.sh
gravsim-renderer/shaders/: vert.spv
gravsim-renderer/src/: main.rs  state.rs
gravsim-renderer/src/shaders/: vertex.vert
gravsim-simulation/: Cargo.toml
gravsim-simulation/benches/: gravity.rs
gravsim-simulation/src/: lib.rs  tree.rs
src/: main.rs  simulation.rs  stars.rs  state.rs  tree.rs
src/shaders/: fragment.frag  vertex.vert
