[package]
name = "gravsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3

[profile.release]
debug = true

[dependencies]
bytemuck = { version = "1.10.0", features = ["derive"] }
wgpu = { version = "0.13.1", features = ["spirv"] }
tokio = { version = "1.20.0", features = ["full"] }
nalgebra = "0.31.0"
smallvec = "1.9.0"
num_enum = "0.5.7"
palette = "0.6.1"
winit = "0.26.1"
rayon = "1.5.3"
rand = "0.8.5"
