[package]
name = "gravsim-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.31.1", features = ["serde-serialize"] }
serde = { version = "1.0.141", features = ["derive"] }
rand_xorshift = "0.3.0"
smallvec = "1.9.0"
num_enum = "0.5.7"
rayon = "1.5.3"
rand = "0.8.5"

[dev-dependencies]
criterion = {version = "0.3.6", features = ["html_reports"]}
once_cell = "1.13.0"
bincode = "1.3.3"

[[bench]]
name = "gravity"
harness = false